syntax = "proto3";

package proto.grid.messages;

import "proto/core/common/common_object.proto";
import "proto/core/io/address.proto";


// CREATE WORKER
message CreateWorkerMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}

message CreateWorkerResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}

// CHECK Cloud instance types
message GetWorkerInstanceTypesMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}

message GetWorkerInstanceTypesResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}


// GET Worker
message GetWorkerMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}


message GetWorkerResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}

// GET ALL Workers
message GetWorkersMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}

message GetWorkersResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}

// Delete Worker
message DeleteWorkerMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}

message DeleteWorkerResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}

// UPDATE Worker
message UpdateWorkerMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}

message UpdateWorkerResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}
