syntax = "proto3";

package proto.grid.messages;

import "proto/core/common/common_object.proto";
import "proto/core/io/address.proto";

message LoadObjectMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
  proto.core.io.Address reply_to = 4;
}

message LoadObjectResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}


message SaveObjectMessage {
  proto.core.common.UID msg_id = 1;
  proto.core.io.Address address = 2;
  string content = 3;
}

message SaveObjectResponse {
  proto.core.common.UID msg_id = 1;
  int32 status_code = 2;
  string content = 3;
  proto.core.io.Address address = 4;
}
